--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
 
     // DataStore (https://developer.android.com/topic/libraries/architecture/datastore)
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+//    implementation 'com.github.limxing:LFRecyclerView-Android:1.0.5'
 }
