--- a/XRecyclerView/build.gradle
+++ b/XRecyclerView/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.side.project.customrecyclerview'
+    namespace 'mai.ddplay.xrecyclerview'
     compileSdk 33
 
     buildFeatures {
@@ -12,13 +12,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.side.project.customrecyclerview"
-        minSdk 26
+        minSdk 23
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -46,18 +44,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation project(":XRecyclerView")
-
-    // Retrofit & Gson (https://square.github.io/retrofit/)
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0" // 用於攔截API
-
-    // Coil (https://coil-kt.github.io/coil/)
-    implementation "io.coil-kt:coil:2.2.2"
-    implementation "io.coil-kt:coil-base:2.2.2"
-
-    // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    // DataStore (https://developer.android.com/topic/libraries/architecture/datastore)
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
